<resources>
    <string name="app_name">My Application</string>
    <string name="numeroPermis">L1531-171374-08</string>
    <string name="prenom_sitoyen">Hans</string>
    <string name="nom_citoyen">Darmstadt-Bélanger</string>
    <string name="ddn">1974-12-17</string>
    <string name="adresse">1234 Rue des rues, VilleVille, Québec</string>
    <string name="sexe">(F)</string>
    <string name="classe">Classe 5</string>
</resources>
